syntax = "proto3";

package fileservice;

option go_package = "github.com/4erneff/alcatraz/proto";  

service FileService {
  // New endpoint to get file metadata (total size, total chunks)
  rpc GetFileMetadata (FileMetadataRequest) returns (FileMetadataResponse);

  // Endpoint to stream the file in chunks
  rpc GetFileStream (FileRequest) returns (stream FileChunk);
}

message FileMetadataRequest{
}

message FileRequest {
  int32 start_chunk = 1; // Starting chunk number for resuming downloads
}

message FileMetadataResponse {
  int64 total_size = 1;  // Total size of the file in bytes
  int32 total_chunks = 2; // Total number of chunks
}

message FileChunk {
  int32 sequence_number = 1;
  bytes chunk_data = 2;
  int64 total_size = 3;
  string checksum = 4;
  int32 total_chunks = 5;
}

